update api description for auth,provider,user in swagger
